--- a/views/index.erb
+++ b/views/index.erb
@@ -31,7 +31,7 @@
                 <img src="/imagenes/galeria/slide/banda6.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                 <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                 <img src="/imagenes/galeria/slide/banda1.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 <img src="/imagenes/galeria/slide/banda2.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <img src="/imagenes/galeria/slide/banda3.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                 <img src="/imagenes/galeria/slide/banda8.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 <img src="/imagenes/galeria/slide/banda20.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <img src="/imagenes/galeria/slide/banda30.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <img src="/imagenes/galeria/slide/banda60.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <img src="/imagenes/galeria/slide/bandd.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h2 class="textoslide">
-                        <b>Buena Cosecha!</b>
+                        <!-- <b>Buena Cosecha!</b> -->
                     </h2>
                 </div>
             </div>
