--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2058,9 +2058,9 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     color: #43962D;
 }
 
-.textoslide {
+.textomenucentro {
     font-size: 44px;
     font-family: 'Finger Paint', cursive;
     text-align: left;;
-    color: #000000;
+    color: #FFFFFF;
 }
