--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,7 +46,7 @@
             </li>
             <li class="w3-hide-small">
                 <a href="nosotros" class="w3-padding-large" title="Nosotros">
-                    <h4 class="menuhomeverde">Nosotros</h4>
+                    <h4 class="textomenucentro">Nosotros</h4>
                 </a>
             </li>
             <li class="w3-hide-small w3-center">
