--- a/views/layout.erb
+++ b/views/layout.erb
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-center">
-                <h2 class="textomenucentro">
+                <h2 class="textomenucentro w3-animate-opacity">
                     <b>Buena Cosecha!</b>
                 </h2>
             </li>
