--- a/views/index.erb
+++ b/views/index.erb
@@ -107,14 +107,15 @@
                     </h2>
                 </div>
             </div>
+        </div>
 
-            <!-- Footer -->
-            <footer></footer>
+        <!-- Footer -->
+        <footer></footer>
 
-            <script src="/js/slide.js"></script>
-            <script src="/js/menu.js"></script>
-            <script src="/js/clicks.js"></script>
-            <script src="/js/jquery.js"></script>
+        <script src="/js/slide.js"></script>
+        <script src="/js/menu.js"></script>
+        <script src="/js/clicks.js"></script>
+        <script src="/js/jquery.js"></script>
 
-        </body>
-    </html>
+    </body>
+</html>
