--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2064,3 +2064,10 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     text-align: left;;
     color: #FFFFFF;
 }
+
+/* Clase para el footer de redes sociales */
+
+.footertype, .footertypehover:hover {
+    color: #000!important;
+    background-color: #C7E970!important
+}
