--- a/views/layout.erb
+++ b/views/layout.erb
@@ -130,7 +130,7 @@
                 <%= yield %>
             </div>
         </body>
-        <footer class="w3-container w3-padding-16 w3-light-grey w3-centered w3-bottom">
+        <footer class="w3-container w3-padding-16 w3-centered w3-bottom footertype">
             <table class="w3-table-all w3-centered">
                 <tr>
                     <th>
