--- a/views/layout.erb
+++ b/views/layout.erb
@@ -130,36 +130,34 @@
                 <%= yield %>
             </div>
         </body>
-        <footer class="w3-container w3-padding-16 w3-centered w3-bottom footertype">
-            <table class="w3-table-all w3-centered">
-                <tr>
-                    <th>
-                        <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
-                            <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
-                        </a>
-                    </th>
-                    <th>
-                        <a href="https://www.instagram.com/buenacosechaska" target="_blank">
-                            <i id="social-in" class="fa fa-instagram fa-2x social"></i>
-                        </a>
-                    </th>
-                    <th>
-                        <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
-                            <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
-                        </a>
-                    </th>
-                    <th>
-                        <a href="https://www.twitter.com/buenacosechaska" target="_blank">
-                            <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
-                        </a>
-                    </th>
-                    <th>
-                        <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
-                            <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
-                        </a>
-                    </th>
-                </tr>
-            </div>
-
-        </footer>
-    </html>
+        <div class="w3-bottom">
+            <ul class="w3-navbar w3-card-2 w3-center footertype">
+                <li>
+                    <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+                        <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/buenacosechaska" target="_blank">
+                        <i id="social-in" class="fa fa-instagram fa-2x social"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
+                        <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/buenacosechaska" target="_blank">
+                        <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
+                        <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+</html>
