--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2068,6 +2068,6 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 /* Clase para el footer de redes sociales */
 
 .footertype, .footertypehover:hover {
-    color: #fff!important;
+    color: #493B3B!important;
     background-color: #C7E970!important
 }
