--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2069,5 +2069,5 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 
 .footertype, .footertypehover:hover {
     color: #fff!important;
-    background-color: #59A6F5!important
+    background-color: #B1BAC4!important
 }
