--- a/views/layout.erb
+++ b/views/layout.erb
@@ -130,8 +130,8 @@
                 <%= yield %>
             </div>
         </body>
-        <div class="w3-bottom w3-right">
-            <ul class="w3-navbar footertype ">
+        <div class="w3-bottom">
+            <ul class="footertype w3-navbar w3-card-2 w3-center-align">
                 <li>
                     <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
                         <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
