--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2074,6 +2074,6 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 
 .textocategorias {
     font-size: 20px;
-    font-family: 'Anton', sans-serif;
+    font-family: 'Shrikhand', cursive;
     color: #A32535;
 }
