--- a/views/secciones/multimedia.erb
+++ b/views/secciones/multimedia.erb
@@ -11,22 +11,22 @@
     <br>
     <br>
 
-    <body class="">
-        <div class="w3-container w3-leftbar textocategorias">
+    <body class="textocategorias">
+        <div class="w3-container w3-leftbar">
             <a href="audios" class="quitar textocategorias">
                 <h3>Audios</h3>
             </a>
         </div>
         <br>
 
-        <div class="w3-container w3-leftbar textocategorias">
+        <div class="w3-container w3-leftbar">
             <a href="videos" class="quitar textocategorias">
                 <h3>Videos</h3>
             </a>
         </div>
         <br>
 
-        <div class="w3-container w3-leftbar textocategorias">
+        <div class="w3-container w3-leftbar">
             <a href="letras" class="quitar textocategorias">
                 <h3>Letras</h3>
             </a>
