--- a/views/fechas/clubv.erb
+++ b/views/fechas/clubv.erb
@@ -13,29 +13,16 @@
         <div class="w3-container">
             <div class="w3-row-padding w3-margin-top" style="margin:0 -16px">
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/clubv11-11/banda1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/clubv11-11/banda2.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/clubv11-11/banda3.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
-                </div>
-                <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
-                </div>
-
-                <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
-                </div>
-                <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
-                </div>
-                <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/clubv11-11/banda4.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
             </div>
 
@@ -44,14 +31,10 @@
 
                 <div class="w3-modal-content">
                     <div class="w3-content" style="max-width:1200px">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band1.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/clubv11-11/banda1.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/clubv11-11/banda2.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/clubv11-11/banda3.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/clubv11-11/banda4.jpg" style="width:100%">
 
                         <div class="w3-row w3-black w3-center">
                             <div class="w3-container w3-display-container">
@@ -60,52 +43,40 @@
                                 <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:98%" onclick="plusDivs(1)">&#10095;</span>
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/clubv11-11/banda1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/clubv11-11/banda2.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band7.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/clubv11-11/banda3.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band2.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/clubv11-11/banda4.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
-                            <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band3.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
-                            </div>
-                            <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band4.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
-                            </div>
-                            <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band5.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
-                            </div>
-                            <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/loca20-8/band6.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
-                            </div>
+                            <div class="w3-col s3"></div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="w3-container">
-            <div>
-                <a class="quitar" target="_blank" href="https://www.facebook.com/1026536224096919/photos/?tab=album&album_id=1075265509223990">
-                    <h5>Mas fotos aquí!</h5>
-                    <i class="icon-facebook-sign icon-3x"></i>
+            <div class="w3-container">
+                <div>
+                    <a class="quitar" target="_blank" href="https://www.facebook.com/gaby.montiel.714/posts/10211049513258816">
+                        <h5>Mas fotos aquí!</h5>
+                        <i class="icon-facebook-sign icon-3x"></i>
 
-                </a>
+                    </a>
+                </div>
+                <div>
+                    <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1075485879201953">
+                        <h5>Y aquí!</h5>
+                        <i class="icon-facebook-sign icon-3x"></i>
+
+                    </a>
+                </div>
             </div>
-            <div>
-                <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1075485879201953">
-                    <h5>Y aquí!</h5>
-                    <i class="icon-facebook-sign icon-3x"></i>
+            <script src="/js/imagegalery.js"></script>
 
-                </a>
-            </div>
-        </div>
-        <script src="/js/imagegalery.js"></script>
-
-    </body>
-</html>
+        </body>
+    </html>
