--- a/views/secciones/votaciones.erb
+++ b/views/secciones/votaciones.erb
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
         <title>Votaciones | Buena Cosecha guacho!
         </title>
     </head>
@@ -14,9 +17,8 @@
         <br>
         <br>
 
-        <a class="w3-btn" href='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95' title="¿Cuantos temas grabar?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación uno | Grabación </a>
-
-        <a class="w3-btn" href='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540' title="¿Ensayar despues de asado?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación dos | Asado</a>
+        <a class="w3-btn w3-indigo" href='https://forms.zohopublic.com/info450/form/Ensayardespuesdeasado/formperma/C0A5Eb5KB0j4K1d14M8kh6540' title="¿Ensayar despues de asado?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación dos | Asado y ensayo</a>
+        <a class="w3-btn w3-teal" href='https://forms.zohopublic.com/info450/form/Cuantostemasgrabar/formperma/k_27e1Ek41Cjf1CH3eJd36e95' title="¿Cuantos temas grabar?" target='_blank' onclick="zforms_open_window(this.href, 648, 700); return false">Votación uno | Grabación y temas</a>
 
         <script src="/js/encuestaspopups.js"></script>
     </body>
