--- a/views/layout.erb
+++ b/views/layout.erb
@@ -84,13 +84,13 @@
     <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
         <ul class="w3-navbar w3-left-align w3-black">
             <li>
+                <a class="w3-padding-large" href="/">Home</a>
+            </li>
+            <li>
                 <a class="w3-padding-large" href="multimedia">Música</a>
             </li>
             <li>
                 <a class="w3-padding-large" href="shows">Fechas</a>
-            </li>
-            <li>
-                <a class="w3-padding-large" href="mailto:info@buenacosecha.com.ar?subject=contacto">Contacto</a>
             </li>
         </ul>
     </div>
