--- a/views/layout.erb
+++ b/views/layout.erb
@@ -81,7 +81,7 @@
         </ul>
     </div>
     <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
         <ul class="w3-navbar w3-left-align w3-black">
             <li>
                 <a class="w3-padding-large" href="/">Home</a>
