--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2077,19 +2077,19 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     color: #FFFFFF;
 }
 
-.textomenumobilemusica {
+#textomenumobilemusica {
     font-size: 10px;
     font-family: 'Bangers', cursive;
     color: #A32535;
 }
 
-.textomenumobileshows {
+#textomenumobileshows {
     font-size: 10px;
     font-family: 'Bangers', cursive;
     color: #E6D672;
 }
 
-.textomenumobilenosotros {
+#textomenumobilenosotros {
     font-size: 10px;
     font-family: 'Bangers', cursive;
     color: #43962D;
