--- a/views/secciones/musica.erb
+++ b/views/secciones/musica.erb
@@ -16,6 +16,9 @@
 
         <h1>
             En construcción</h1>
+            <script src="/js/menu.js"></script>
+            <script src="/js/clicks.js"></script>
+            <script src="/js/jquery.js"></script>
 
     </body>
 </html>
