--- a/views/index.erb
+++ b/views/index.erb
@@ -88,9 +88,11 @@
             </div>
         </div>
 
-        <script src="/js/slide.js"></script>
-        <script src="/js/menu.js"></script>
-        <script src="/js/clicks.js"></script>
-        <script src="/js/jquery.js"></script>
     </body>
+
+    <script src="/js/slide.js"></script>
+    <script src="/js/menu.js"></script>
+    <script src="/js/clicks.js"></script>
+    <script src="/js/jquery.js"></script>
+</body>
 </html>
