--- a/views/layout.erb
+++ b/views/layout.erb
@@ -115,6 +115,8 @@
         <script src="/js/menu.js"></script>
         <script src="/js/clicks.js"></script>
         <script src="/js/jquery.js"></script>
+        <script src="/js/facebooklike.js"></script>
+
     </body>
 
     <!-- Contenido del footer -->
