--- a/views/layout.erb
+++ b/views/layout.erb
@@ -79,7 +79,7 @@
                     <i id="social-ho" class="fa fa-home fa-3x social"></i>
                 </a>
             </li>
-            <div id="fb-root"></div>
+            <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="box_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
         </ul>
     </div>
 
@@ -101,9 +101,7 @@
             </li>
         </ul>
     </div>
-    <div class="w3-container proximosshowsmobile" id="proximosshowsmobile">
-
-    </div>
+    <div class="w3-container proximosshowsmobile" id="proximosshowsmobile"></div>
 
     <!-- Contenido del body -->
     <body>
