--- a/views/layout.erb
+++ b/views/layout.erb
@@ -80,7 +80,7 @@
                 </a>
             </li>
             <div id="fb-root"></div>
-            <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="box_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+            <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
         </ul>
     </div>
 
