--- a/views/layout.erb
+++ b/views/layout.erb
@@ -47,7 +47,7 @@
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="javascript:void(0)">
                     <i id="fb-root" class="fa-3x social">
-                        <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+                        <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div>
                     </i>
                 </a>
             </li>
