--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -13,7 +13,7 @@
         <br>
 
         <div class="w3-container w3-hoverable">
-            <a href="clubv" class="quitar">
+            <a href="pasados" class="quitar">
                 <span class="textodescripcion">Zona 42 | 23 hs | Guernica|</span>
                 <span class="texttercernivel">15 de Octubre de 2016</span>
                 <img src="/imagenes/flyers/zona42.jpg" class="w3-circle w3-margin-right" style="width:30px">
