--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,23 +20,23 @@
                     <i class="fa fa-bars"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
-                <a href="multimedia" class="w3-hover-none w3-padding-large submenu" title="Musica">
+            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover">
+                <a href="multimedia" class="w3-hover-none w3-padding-large" title="Musica">
                     <h4 id="menumusica" class="menuhomerojo">MÚSICA</h4>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
-                    <a href="audios">Audios</a>
-                    <a href="videos">Videos</a>
-                    <a href="letras">Letras</a>
+                    <a href="audios" class="menuhomerojo">Audios</a>
+                    <a href="videos" class="menuhomerojo">Videos</a>
+                    <a href="letras" class="menuhomerojo">Letras</a>
                 </div>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover submenu">
+            <li class="w3-hide-small w3-hide-medium w3-dropdown-hover">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Shows">
                     <h4 id="menushow" class="menuhomeamarillo">SHOWS</h4>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align ">
-                    <a href="proximos">Próximos</a>
-                    <a href="pasados">Pasados</a>
+                    <a href="proximos" class="menuhomeamarillo">Próximos</a>
+                    <a href="pasados" class="menuhomeamarillo">Pasados</a>
                 </div>
             </li>
             <li class="w3-hide-small w3-hide-medium ">
