--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -16,7 +16,7 @@
             <a href="pasados" class="quitar">
                 <span class="textodescripcion">White Vinyl 2 | 23 hs | CABA|</span>
                 <span class="texttercernivel">26 de Noviembre de 2016</span>
-                <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:75px">
+                <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:45px"> Cancelado
             </a>
         </div>
         <br>
@@ -34,7 +34,7 @@
             <a href="pasados" class="quitar">
                 <span class="textodescripcion">Zona 42 | 23 hs | Guernica|</span>
                 <span class="texttercernivel">15 de Octubre de 2016</span>
-                <img src="/imagenes/flyers/zona42.jpg" class="w3-circle w3-margin-right" style="width:30px">
+                <img src="/imagenes/flyers/zona42.jpg" class="w3-circle w3-margin-right" style="width:30px"> Cancelado
             </a>
         </div>
         <br>
