--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -13,7 +13,7 @@
         <br>
 
         <div class="w3-container w3-hoverable">
-            <a href="pasados" class="quitar">
+            <a href="https://www.facebook.com/events/1842814522622071/" class="quitar">
                 <span class="textodescripcion">White Vinyl 2 | 23 hs | CABA|</span>
                 <span class="texttercernivel">26 de Noviembre de 2016</span>
                 <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:45px"> Cancelado
