--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,7 @@
 
     <body>
 
-        <div class="w3-content center" style="max-width:1800px;margin-top:54px">
+        <div class="w3-content w3-center" style="max-width:1800px;margin-top:54px">
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes//flyers/monociclo.jpg" class="w3-animate-top" style="width:50% height:50%">
                 <div class="w3-display-topright w3-container w3-padding-16 w3-red">
